--- a/mkc-client/src/css/accessory.css
+++ b/mkc-client/src/css/accessory.css
@@ -55,3 +55,14 @@
     object-fit: cover;
 }
 
+.accessory-list-img-display {
+    width: 100%;
+    max-height: 60%;
+}
+
+.accessory-list-img-display img {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
