--- a/mkc-client/src/css/order.css
+++ b/mkc-client/src/css/order.css
@@ -203,3 +203,20 @@
     align-items: stretch;
     margin-bottom: 8px;
 }
+
+.order-show-note-area .img-area {
+    width: 300px;
+    height: 300px;
+    background-color: rgb(237, 243, 240);
+    padding: 10px 20px;
+    border-radius: 10px;
+    display: flex;
+    -webkit-box-align: stretch;
+    align-items: stretch;
+    margin-bottom: 8px;
+}
+
+.order-show-note-area .img-area img {
+    width: 100%!important;
+    height: 100%!important;
+}
