--- a/mkc-client/src/css/order.css
+++ b/mkc-client/src/css/order.css
@@ -205,8 +205,8 @@
 }
 
 .order-show-note-area .img-area {
-    width: 300px;
-    height: 300px;
+    width: auto;
+    height: auto;
     background-color: rgb(237, 243, 240);
     padding: 10px 20px;
     border-radius: 10px;
@@ -217,6 +217,7 @@
 }
 
 .order-show-note-area .img-area img {
-    width: 100%!important;
-    height: 100%!important;
+    width: 300px;
+    object-fit: contain;
+    cursor: pointer;
 }
